Add css and login page

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -75,7 +75,7 @@
 @import '~@left4code/tw-starter/dist/scss/pagination';
 @import '~@left4code/tw-starter/dist/scss/progress';
 @import '~@left4code/tw-starter/dist/scss/scrollbar';
-// @import '~@left4code/tw-starter/dist/scss/tab';
+@import '~@left4code/tw-starter/dist/scss/tab';
 @import '~@left4code/tw-starter/dist/scss/table';
 @import '~@left4code/tw-starter/dist/scss/typing-dots';
 @import '~@left4code/tw-starter/dist/scss/zoom-in';
@@ -86,10 +86,10 @@
 @import '~tippy.js/dist/svg-arrow';
 @import '~tippy.js/animations/shift-away';
 @import '~toastify-js/src/toastify';
-// @import '~dropzone/dist/dropzone';
-// @import '~zoom-vanilla.js/dist/zoom';
-// @import '~tabulator-tables/dist/css/tabulator';
-// @import '~tom-select/src/scss/tom-select';
+@import '~dropzone/dist/dropzone';
+@import '~zoom-vanilla.js/dist/zoom';
+@import '~tabulator-tables/dist/css/tabulator';
+@import '~tom-select/src/scss/tom-select';
 
 /*
  |--------------------------------------------------------------------------
@@ -101,53 +101,53 @@
  */
 @import 'components/global';
 @import 'components/main';
-// @import 'components/top-bar';
-// @import 'components/login';
-// @import 'components/table-report';
-// @import 'components/report-timeline';
-// @import 'components/report-chart';
-// @import 'components/search';
-// @import 'components/notification';
-// @import 'components/report-box';
-// @import 'components/report-box-2';
-// @import 'components/report-box-3';
-// @import 'components/report-box-4';
-// @import 'components/content';
-// @import 'components/top-nav';
-// @import 'components/side-nav';
-// @import 'components/breadcrumb';
-// @import 'components/toastify';
-// @import 'components/toastify-content';
-// @import 'components/feather-icon';
-// @import 'components/top-bar-boxed';
-// @import 'components/mobile-menu';
-// @import 'components/inbox-filter';
-// @import 'components/inbox';
-// @import 'components/chat';
-// @import 'components/boxed-tabs';
-// @import 'components/chat-dropdown';
-// @import 'components/wizard';
-// @import 'components/blog';
-// @import 'components/news';
-// @import 'components/pricing-tabs';
-// @import 'components/error-page';
-// @import 'components/search-result';
-// @import 'components/notification-content';
-// @import 'components/report-maps';
-// @import 'components/pos-dropdown';
-// @import 'components/pos';
-// @import 'components/post';
-// @import 'components/litepicker';
-// @import 'components/tiny-slider';
-// @import 'components/tippy';
-// @import 'components/tabulator';
-// @import 'components/tom-select';
-// @import 'components/dropzone';
+@import 'components/top-bar';
+@import 'components/login';
+@import 'components/table-report';
+@import 'components/report-timeline';
+@import 'components/report-chart';
+@import 'components/search';
+@import 'components/notification';
+@import 'components/report-box';
+@import 'components/report-box-2';
+@import 'components/report-box-3';
+@import 'components/report-box-4';
+@import 'components/content';
+@import 'components/top-nav';
+@import 'components/side-nav';
+@import 'components/breadcrumb';
+@import 'components/toastify';
+@import 'components/toastify-content';
+@import 'components/feather-icon';
+@import 'components/top-bar-boxed';
+@import 'components/mobile-menu';
+@import 'components/inbox-filter';
+@import 'components/inbox';
+@import 'components/chat';
+@import 'components/boxed-tabs';
+@import 'components/chat-dropdown';
+@import 'components/wizard';
+@import 'components/blog';
+@import 'components/news';
+@import 'components/pricing-tabs';
+@import 'components/error-page';
+@import 'components/search-result';
+@import 'components/notification-content';
+@import 'components/report-maps';
+@import 'components/pos-dropdown';
+@import 'components/pos';
+@import 'components/post';
+@import 'components/litepicker';
+@import 'components/tiny-slider';
+@import 'components/tippy';
+@import 'components/tabulator';
+@import 'components/tom-select';
+@import 'components/dropzone';
 // @import 'components/ckeditor';
-// @import 'components/zoom-vanilla';
-// @import 'components/dark-mode-switcher';
+@import 'components/zoom-vanilla';
+@import 'components/dark-mode-switcher';
 // @import 'components/hljs';
 // @import 'components/source-preview';
 // @import 'components/ads-box';
-// @import 'components/full-calendar';
+@import 'components/full-calendar';
 // @import 'components/pristine';
