--- a/src/assets/sass/components/_global.scss
+++ b/src/assets/sass/components/_global.scss
@@ -11,6 +11,9 @@ html {
       }
     }
   }
+//   &.dark-buy {
+//     @apply bg-dark-8;
+//   }
   body {
     -webkit-font-smoothing: antialiased;
     @apply overflow-x-hidden py-3 px-8 font-roboto text-sm text-gray-800;
